Fix byline hidden on mobile single

--- a/client/src/css/_content.scss
+++ b/client/src/css/_content.scss
@@ -83,7 +83,7 @@ body {
 	@media (max-width: 400px) {
 		flex-direction: column;
 		.bio {
-			padding: 30px 0 30px 0 !important;
+			padding: 30px 0 0 0 !important;
 		}
 	}
 
